--- a/BlazorTool/Components/App.razor
+++ b/BlazorTool/Components/App.razor
@@ -18,6 +18,7 @@
 <body>
     <Routes @rendermode="new InteractiveWebAssemblyRenderMode(prerender: false)" />
     <script src="_framework/blazor.web.js"></script>
+    <script src="~/scripts.js"></script>
 </body>
 
 </html>
