--- a/BlazorTool/Components/App.razor
+++ b/BlazorTool/Components/App.razor
@@ -13,6 +13,7 @@
     <title>FlexiCMMS</title>
     <link rel="stylesheet" href="https://blazor.cdn.telerik.com/blazor/6.2.0/kendo-theme-bootstrap/swatches/bootstrap-urban.css" />
     <script src="https://blazor.cdn.telerik.com/blazor/6.2.0/telerik-blazor.min.js" defer></script>
+    <script src="/js/utility.js"></script>
 </head>
 
 <body>
