--- a/BlazorTool.Client/Pages/Settings.razor
+++ b/BlazorTool.Client/Pages/Settings.razor
@@ -29,10 +29,10 @@
     @if (isAdmin)
     {
         <div class="row mb-3">
-            <div class="col-md-6">
-                <label for="apiUrl" class="form-label">@Localizer["Settings_ApiAddress"]</label>
-                <div class="input-group">
-                    <input type="text" id="apiUrl" class="form-control" @bind="ApiAddress" />
+            <div class="col-md-6 d-flex align-items-center">
+                <label for="apiUrl" class="form-label me-3" style="min-width: 150px;">@Localizer["Settings_ApiAddress"]</label>
+                <div class="input-group" style="width: 200px;">
+                    <input type="text" id="apiUrl" class="form-control" @bind="ApiAddress" style="width: 200px;" />
                     <button class="btn btn-outline-secondary" type="button" @onclick="TestApiAddress">@Localizer["Settings_TestApiAddress"]</button>
                 </div>
             </div>
@@ -40,13 +40,27 @@
     }
 
     <div class="row mb-3">
-        <div class="col-md-6">
-            <label for="language" class="form-label">Language</label>
-            <select id="language" class="form-select" @bind="@SelectedLanguage">
+        <div class="col-md-6 d-flex align-items-center">
+            <label for="language" class="form-label me-3" style="min-width: 150px;">Language</label>
+            <select id="language" class="form-select" @bind="@SelectedLanguage" style="width: 200px;">
                 <option value="pl-PL">Polski</option>
                 <option value="en-US">English</option>
                 {!-- Add more languages as needed --}
             </select>
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <div class="col-md-6 d-flex align-items-center">
+            <label for="networkShareUsername" class="form-label me-3" style="min-width: 150px;">@Localizer["Settings_NetworkShareUsername"]</label>
+            <TelerikTextBox Id="networkShareUsername" @bind-Value="@NetworkShareUsername" Width="200px" />
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <div class="col-md-6 d-flex align-items-center">
+            <label for="networkSharePassword" class="form-label me-3" style="min-width: 150px;">@Localizer["Settings_NetworkSharePassword"]</label>
+            <TelerikTextBox Id="networkSharePassword" @bind-Value="@NetworkSharePassword" Width="200px" />
         </div>
     </div>
 
@@ -58,7 +72,6 @@
             </div>
         </div>
     </div>
-
 
     <button class="btn btn-primary" @onclick="SaveSettingsAsync">@Localizer["Settings_SaveSettings"]</button>
 
@@ -83,6 +96,8 @@
     protected string? StatusMessageClass { get; set; } // e.g., "text-success" or "text-danger"
     string currentUser = "test User"; // Placeholder for current user, replace with actual user logic"
     private bool UseOriginalColors { get; set; }
+    protected string? NetworkShareUsername { get; set; }
+    protected string? NetworkSharePassword { get; set; }
 
     private bool isConfirmDialogVisible = false;
     private string oldApiAddress = "";
@@ -143,6 +158,8 @@
         }
         SelectedLanguage = UserState.LangCode;
         UseOriginalColors = UserState.UseOriginalColors;
+        NetworkShareUsername = UserState.NetworkShareUsername;
+        NetworkSharePassword = UserState.NetworkSharePassword;
     }
 
     protected async Task<string?> LoadSettingAsync(string key)
