--- a/BlazorTool.Client/Pages/Settings.razor.css
+++ b/BlazorTool.Client/Pages/Settings.razor.css
@@ -50,12 +50,24 @@ h3 {
 /* Ограничиваем максимальную ширину правой колонки с контролами,
    чтобы все поля выглядели одинаково (можно поменять значение под задачу) */
 .form-grid .control-max {
-    max-width: 380px; /* было 200px — можно вернуть 200px, если нужно ровно так */
-/*    width: 200px;*/
+    width: 200px;
 }
 
 .form-grid .row{
-    max-width:60rem;
+    max-width:45rem;
 }
-.form-grid {
+
+.settings-button-center {
+    text-align: center;
+}
+
+.container {
+    max-width: 755px;
+    text-align: -webkit-right;
+}
+
+.form-check {
+    text-align: left;
+    padding-left: 0!important;
+}
 }
